# message_decorator_project

./: .gitignore  README.md  pyproject.toml
src/cool_message_formatter/: main.py  message_formatter.py
src/cool_message_formatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
